fix: ensure overflow is hidden for body and dashboard elements

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
 
 #dashboard {
     width: 100%;
+    height: 100%;
 }
 .cutome-route {
     width: 100%;
